--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,12 +1,12 @@
 <!--index.wxml-->
 <view class="container">
-  <view  bindtap="bindViewTap" class="userinfo">
-    <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-    <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-    <text>{{context}}</text>
-    <input  type="digit" placeholder="String"/>
-  </view>
+    <view bindtap="bindViewTap" class="userinfo">
+        <image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
+        <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+    </view>
+    <view class="usermotto">
+        <text class="user-motto" bindtap="payfn">{{motto}}</text>
+        <text>{{context}}sss</text>
+        <input type="digit" placeholder="String" />
+    </view>
 </view>
