--- a/pages/pay/pay.wxss
+++ b/pages/pay/pay.wxss
@@ -171,6 +171,7 @@
     color: #4D7A95;
     display: block;
     width: 120rpx;
+    margin-left: 10rpx;
 }
 
 
@@ -183,6 +184,9 @@
     position: absolute;
     left: 25rpx;
     bottom: 25rpx;
+    -webkit-transform: translateY(400px);
+    transform: translateY(400px);
+    z-index: 7;
 }
 
 .keyBoardContainer .adContainer {
@@ -251,19 +255,6 @@
 .keyBoardContainer .keyBoard .left {
     width: 525rpx;
     height: 100%;
-    /*background: pink;*/
-    /*display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: start;
-    -ms-flex-pack: start;
-    justify-content: flex-start;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    box-sizing: border-box;*/
 }
 
 .keyBoardContainer .keyBoard .right {
@@ -373,10 +364,18 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    background: rgba(0, 0, 0, 0.5);
     z-index: 10;
     left: 0;
     top: 0;
+}
+
+.messageMaskContainer .maskContainer {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background: #000;
+    z-index: 10;
+    opacity: 0;
 }
 
 .messageMaskContentContainer {
@@ -389,15 +388,28 @@
     box-sizing: border-box;
     padding: 50rpx 0 30rpx;
     border-radius: 8rpx;
+    opacity: 0;
+    -webkit-transform: translateY(200px);
+    transform: translateY(200px);
+    z-index: 11;
 }
 
-.messageMaskContentContainer .messageArea {
+.messageMaskContentContainer .textareaContainer {
     display: block;
     width: 560rpx;
     height: 265rpx;
     border: 1rpx solid #ddd;
     margin: 0 auto 30rpx;
     border-radius: 8rpx;
+    color: #333;
+    box-sizing: border-box;
+    font-size: 28rpx;
+}
+
+.messageMaskContentContainer .textareaContainer .messageArea {
+    display: block;
+    width: 560rpx;
+    height: 265rpx;
     color: #333;
     box-sizing: border-box;
     padding: 20rpx;
@@ -407,8 +419,14 @@
 .messageMaskContentContainer .btnsContainer {
     width: 565rpx;
     height: 90rpx;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     margin: auto;
 }
@@ -419,8 +437,14 @@
     display: block;
     border-radius: 0;
     margin: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
     font-size: 32rpx;
     border-color: #777372;
@@ -440,4 +464,26 @@
 
 .messageMaskContentContainer .btnsContainer button.ok.button-hover {
     opacity: 0.8;
+}
+
+
+/*底部信息样式*/
+
+.footerContainer {
+    width: 100%;
+    height: 180rpx;
+    /*background: pink;*/
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerContainer .footerInfoImage {
+    height: 113rpx;
+    width: 537rpx;
+    display: block;
 }
