--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -11,8 +11,14 @@
     width: 100%;
     height: 165rpx;
     background: #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -29,8 +35,14 @@
 .userInfoContainer .userInfo {
     width: auto;
     height: 110rpx;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
@@ -49,7 +61,6 @@
 .listGroup {
     width: 100%;
     height: calc(100% - 195rpx);
-    background: red;
     margin-top: 30rpx;
 }
 
@@ -58,8 +69,14 @@
     height: 165rpx;
     background: #fff;
     border-bottom: 1px solid #ddd;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
     justify-content: space-between;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     padding-right: 50rpx;
     box-sizing: border-box;
@@ -68,8 +85,14 @@
 .shopInfoContainer {
     height: 100%;
     width: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
 }
 
@@ -85,9 +108,16 @@
 
 .listGroup .listItem .shopInfo {
     width: auto;
-    height: 110rpx;
+    max-width: 300rpx;
+    height: 80%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
 }
 
@@ -95,6 +125,11 @@
     font-family: "微软雅黑";
     font-size: 32rpx;
     color: #333;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
 }
 
 .listGroup .listItem .shopIntr {
@@ -104,12 +139,52 @@
 }
 
 .payNumber {
+    height: 60%;
     color: #FF5000;
     font-size: 40rpx;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
 }
 
 .payNumber::before {
     content: "￥";
     font-family: "微软雅黑";
     font-size: 30rpx;
+}
+
+
+/*空数据时*/
+
+.emptyContainer {
+    width: 100%;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+}
+
+.emptyContainer .emptyImage {
+    display: block;
+    width: 272rpx;
+    height: 293rpx;
+}
+
+.emptyContainer .emptyWord {
+    font-size: 30rpx;
+    color: #777272;
+    margin: 40rpx auto;
 }
